SERVER-58304 Make 'metrics' field in resharding documents optional