src/mongo/db/s/resharding/resharding_coordinator_test.cpp
@@ -91,8 +91,7 @@ protected:
             _reshardingUUID, _originalNss, UUID::gen(), _tempNss, _newShardKey.toBSON());
         ReshardingCoordinatorDocument doc(state,
                                           {DonorShardEntry(ShardId("shard0000"), {})},
-                                          {RecipientShardEntry(ShardId("shard0001"), {})},
-                                          ReshardingCoordinatorMetrics());
+                                          {RecipientShardEntry(ShardId("shard0001"), {})});
         doc.setCommonReshardingMetadata(meta);
         emplaceCloneTimestampIfExists(doc, std::move(fetchTimestamp));
         return doc;
