src/mongo/db/s/resharding/resharding_donor_service_test.cpp
@@ -143,8 +143,7 @@ public:
         ReshardingDonorDocument doc(std::move(donorCtx),
                                     {ShardId{"recipient1"},
                                      isAlsoRecipient ? donorShardId : ShardId{"recipient2"},
-                                     ShardId{"recipient3"}},
-                                    ReshardingDonorMetrics());
+                                     ShardId{"recipient3"}});
 
         NamespaceString sourceNss("sourcedb.sourcecollection");
         auto sourceUUID = UUID::gen();
